<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@drawable/arc"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:src="@mipmap/ic_launcher"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/icon_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size"/>

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/icon_user"
            android:inputType="textNoSuggestions"
            android:background="@null"
            android:hint="username"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/icon_user"
            android:background="@color/colorPrimary"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="@dimen/login_rela_marginLeft"
        android:layout_marginRight="@dimen/login_rela_marginRight"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/icon_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/icon_pass"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="password"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal"/>
        <TextView
            android:id="@+id/icon_show"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/icon_pass"
            android:background="@color/colorPrimary"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_line_marginLeft"
        android:layout_marginRight="@dimen/login_line_marginRight"
        android:layout_marginTop="@dimen/login_line_marginTop"
        android:paddingBottom="1dp"
        android:paddingTop="3dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/register"
            android:textSize="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/manager_login"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="管理员登录"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="用户登录"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>