<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="注册"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:text="@string/edit_user"
            android:textColor="@color/colorText"
            android:textSize="@dimen/register_font" />

        <EditText
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/username"
            android:background="@null"
            android:hint="username"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/username"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:text="@string/edit_pass"
            android:textColor="@color/colorText"
            android:textSize="@dimen/register_font" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/password"
            android:background="@null"
            android:hint="password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/register_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:clickable="true"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/password"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_rela_height"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/repassword"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_icon_marginLeft"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:text="@string/edit_repass"
            android:textColor="@color/colorText"
            android:textSize="@dimen/register_font" />

        <EditText
            android:id="@+id/register_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/repassword"
            android:background="@null"
            android:hint="repassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/register_show2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/login_icon_marginTop"
            android:clickable="true"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/login_icon_size_small" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/repassword"
            android:background="@color/colorPrimary" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/register_btn"
        android:layout_marginRight="16dp"
        android:background="@drawable/background_shape"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/btn_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>